# Trabalho-CG-2022-2023

./: .gitattributes  .gitignore  LICENSE  README.md  makefile
Fase 1/: main.cpp
Fase 1/outputs/: plane.3d
Fase 1/src/: CMakeLists.txt
Fase 1/src/engine/: engine.cpp
Fase 1/src/generator/: generator.cpp
Fase 1/src/utils/: figura.cpp  figura.hpp
Fase_1/configs/: mytest.xml  sphere.xml  test.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
Fase_1/outputs/: cone_1_2_4_3.3d  sphere_1_10_10.3d
Fase_1/src/: CMakeLists.txt
Fase_1/src/engine/: config.cpp  config.hpp  engine.cpp  test.xml
Fase_1/src/generator/: generator.cpp
Fase_1/src/utils/: figura.cpp  figura.hpp  list.cpp  list.hpp  ponto.cpp  ponto.hpp
Fase_2/configs/: asolar.xml  big.xml  mytest.xml  small.xml  solar.xml  solarAligned.xml  solarLinear.xml  solarRotated.xml  solarRotatedinLine.xml  sphere.xml
Fase_2/configs/demos/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
Fase_2/outputs/: box_2_3.3d  ring.3d  sphere.3d
Fase_2/src/: CMakeLists.txt  CMakeLists_.txt
Fase_2/src/engine/: config.cpp  config.hpp  engine.cpp
Fase_2/src/generator/: generator.cpp
Fase_2/src/utils/: ponto.cpp  tree.cpp  tree.hpp
Fase_3/: comet.py
Fase_3/configs/: small.xml  solar.xml  solarAligned.xml  solarAnimated.xml  solarRotatedinLine.xml  sphere.xml  teapot.xml
Fase_3/configs/demos/: test_3_1.xml  test_3_2.xml
Fase_3/outputs/: box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  ring.3d  sphere_1_10_10.3d  teapot.3d
Fase_3/patches/: comet.patch  test.patch
Fase_3/src/: CMakeLists.txt
Fase_3/src/engine/: config.cpp  config.hpp  engine.cpp
Fase_3/src/generator/: generator.cpp
Fase_3/src/utils/: figura.cpp  figura.hpp  list.cpp  matrix.cpp  matrix.hpp  ponto.cpp  tree.cpp
Fase_4/configs/: box.xml  comet.xml  cone.xml  my_test_4_4.xml  plane.xml  ring.xml  ring_tex.xml  solarAnimated.xml  solarAnimated2.xml  solarStatic.xml  sphere.xml  test_4_1.xml
Fase_4/configs/demos/: box.xml  cone.xml  gelado.xml  holofote.xml  plano.xml  ring.xml  teapot.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
Fase_4/configs/figs/: box_simple.xml  cone.xml  plane.xml  surface.xml
Fase_4/configs/solar/: planering.xml  ring.xml
Fase_4/configs/tests/: gelado.xml  ring.xml  simplepatch.xml
Fase_4/outputs/: bezier_10.3d  box.3d  box_2_3.3d  cone.3d  cone_1_2_4_3.3d  plane.3d  ring_tex.3d  sphere.3d  sphere_1_8_8.3d  teapot.3d
Fase_4/outputs/demos/: bezier_10.3d  cone_1_2_20_20.3d  cone_1_2_4_3.3d  plane_2_3.3d  ring_1_3_15.3d  sphere_1_8_8.3d
Fase_4/outputs/figs/: README.md  box.3d  comet.3d  cone.3d  ring.3d  simplepatch.3d  surface.3d  teapot.3d
Fase_4/outputs/hd/: comet.3d  cone.3d  ring.3d  ring_3_5_200.3d  ring_3_5_30.3d  sphere.3d
Fase_4/src/: CMakeLists.txt
(+12 files in other folders)
